--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="linearRegression.html">Linear Regression</a>
-    <a href="kMeans.html">KMeans</a>
+    <div class="container">
+      <div class="header">
+        <h1>ML&AI Tools</h1>
+      </div>
+      <div class="content">
+        <h2>Linear Regression</h2>
+        <p>
+          <a href="linearRegression.html">Linear Regression</a>
+        </p>
+        <h2>K-Means</h2>
+        <p>
+          <a href="kMeans.html">K-Means</a>
+        </p>
+      </div>
   </body>
 </html>
