--- a/kMeans.html
+++ b/kMeans.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Linear Regression</title>
+    <title>K-Means</title>
     <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="kMeans.js"></script>
     <script type="text/javascript" src="util.js"></script>
